Fixed a font layout issue.

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Inter";
-  src: url("../assets/fonts/Inter_24pt-Regular.ttf")
+  src: url("assets/fonts/Inter_24pt-Regular.ttf")
 }
 
 :root {
